feat: revamp resume
